change datePicker and states

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Common -->
+    <string name="accept">ACEPTAR</string>
+    <string name="cancel">CANCELAR</string>
+
     <!-- Bottom Navigation   -->
     <string name="navigation_calendar">Calendario</string>
     <string name="navigation_search">Buscar</string>
     <string name="navigation_about">Información</string>
+
 </resources>
