--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,6 +4,8 @@
     <!-- Common -->
     <string name="accept">ACEPTAR</string>
     <string name="cancel">CANCELAR</string>
+    <string name="try_again">Reintentar</string>
+    <string name="error_text">Error: No se ha podido obtener la información</string>
 
     <!-- Bottom Navigation   -->
     <string name="navigation_calendar">Calendario</string>
