--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <!-- Common -->
     <string name="accept">OK</string>
     <string name="cancel">CANCEL</string>
+    <string name="try_again">Try Again</string>
+    <string name="error_text">Error: The information could not be obtained</string>
 
     <!-- Bottom Navigation -->
     <string name="navigation_calendar">Calendar</string>
