--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name" translatable="false">Kpop Calendar</string>
 
     <!-- Common -->
-    <string name="accept">OK</string>
-    <string name="cancel">CANCEL</string>
     <string name="try_again">Try Again</string>
     <string name="error_text">Error: The information could not be obtained</string>
 
@@ -14,4 +12,5 @@
 
     <!-- Calendar -->
     <string name="calendar_songs_empty">No new songs this day</string>
+    <string name="calendar_teaser_not_available">Teaser not available</string>
 </resources>
