--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,4 +14,7 @@
     <string name="calendar_songs_empty">No hay canciones nuevas este día</string>
     <string name="calendar_teaser_not_available">Teaser no disponible</string>
 
+    <!-- Search -->
+    <string name="search_text_field_placeholder">Buscar una canción</string>
+
 </resources>
