--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,6 +8,7 @@
     <!-- Bottom Navigation   -->
     <string name="navigation_calendar">Calendario</string>
     <string name="navigation_search">Buscar</string>
+    <string name="navigation_liked">Me gusta</string>
     <string name="navigation_about">Información</string>
 
     <!-- Calendar -->
