change song strings to MV

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,7 +16,7 @@
     <string name="calendar_teaser_not_available">Teaser no disponible</string>
 
     <!-- Search -->
-    <string name="search_text_field_placeholder">Buscar una canción</string>
-    <string name="search_no_results">No se han encontrado canciones</string>
+    <string name="search_text_field_placeholder">Buscar un MV</string>
+    <string name="search_no_results">No se han encontrado MVs</string>
 
 </resources>
