change liked emptyu view text

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -23,5 +23,6 @@
     <string name="liked_snackbar_song_added">Se ha añadido a MVs que te gustan</string>
     <string name="liked_snackbar_song_removed">Se ha quitado de MVs que te gustan</string>
     <string name="liked_top_app_bar">MVs que te gustan</string>
+    <string name="liked_empty_view">No has añadido videos a \"Me gusta\". Puedes añadirlos pulsando en el ❤️ que aparece arriba a la derecha de cada video</string>
 
 </resources>
