--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name" translatable="false">Calendario Kpop</string>
+
     <!-- Common -->
     <string name="try_again">Reintentar</string>
     <string name="error_text">Error: No se ha podido obtener la información</string>
